Fix the spacing after tables.

--- a/_css/pixyll.css
+++ b/_css/pixyll.css
@@ -97,7 +97,7 @@ body {
 table {
   width: 100%;
   max-width: 100%;
-  margin-bottom: 1.5;
+  margin-bottom: 1em;
   font-size: 1.125rem;
 }
 
